[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Options.gd" type="Script" id=1]

[node name="StartOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.5
margin_top = -52.0
margin_right = 134.5
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainerName" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 269.0
margin_bottom = 24.0
custom_constants/separation = 80

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainerName"]
margin_top = 5.0
margin_right = 38.0
margin_bottom = 19.0
text = "Name"

[node name="NameInput" type="LineEdit" parent="VBoxContainer/HBoxContainerName"]
margin_left = 118.0
margin_right = 218.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="HBoxContainerLaps" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 269.0
margin_bottom = 52.0
custom_constants/separation = 90
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LapsLabel" type="Label" parent="VBoxContainer/HBoxContainerLaps"]
margin_top = 5.0
margin_right = 29.0
margin_bottom = 19.0
text = "Laps"

[node name="LapsInput" type="SpinBox" parent="VBoxContainer/HBoxContainerLaps"]
margin_left = 119.0
margin_right = 219.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
min_value = 1.0
value = 1.0
align = 1

[node name="HBoxContainerTrans" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 269.0
margin_bottom = 104.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransmissionLabel" type="Label" parent="VBoxContainer/HBoxContainerTrans"]
margin_right = 89.0
margin_bottom = 48.0
text = "Automatic
Transmission 
"

[node name="TransmissionInput" type="CheckBox" parent="VBoxContainer/HBoxContainerTrans"]
margin_left = 149.0
margin_right = 249.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 0 )
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -130.0
margin_top = -40.0
margin_right = 130.0
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="Button" parent="HBoxContainer"]
margin_left = 180.0
margin_right = 260.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 40 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
